--- a/src/Web/Client/Pages/AssetSerialDetail.razor
+++ b/src/Web/Client/Pages/AssetSerialDetail.razor
@@ -9,14 +9,16 @@
 @inject ITagsService TagsService
 @inject NavigationManager NavigationManager
 @inject ISnackbar Snackbar
+@inject IDialogService DialogService
 
-<MudDrawer Open="true" Width="400px" Height="100%" Anchor="Anchor.End" Elevation="1"
-    Variant="@DrawerVariant.Temporary" DisableOverlay="true">
+<MudDrawer Open="true" Width="500px" Height="100%" Anchor="Anchor.End" Elevation="1" Variant="@DrawerVariant.Temporary"
+    DisableOverlay="true">
     <MudDrawerHeader Class="pa-1">
         <div
             style="width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center">
             <div>
-                <MudIconButton Icon="@Icons.Material.Rounded.Close" OnClick="@(() => NavigationManager.NavigateTo("/assets"))"></MudIconButton>
+                <MudIconButton Icon="@Icons.Material.Rounded.Close"
+                    OnClick="@(() => NavigationManager.NavigateTo("/assets"))"></MudIconButton>
             </div>
             @if (isLoading)
             {
@@ -77,30 +79,41 @@
                     </MudText>
                     <MudSelect Value="assetSerial.Status" T="AssetStatus" Margin="Margin.Dense" Variant="Variant.Outlined"
                         ValueChanged="@OnStatusItemChanged">
-                        <MudSelectItem Value="@(AssetStatus.Available)"><MudText Color="Color.Success">@(AssetStatus.Available.ToString())</MudText></MudSelectItem>
-                        <MudSelectItem Value="@(AssetStatus.Taken)"><MudText Color="Color.Info">@(AssetStatus.Taken.ToString())</MudText></MudSelectItem>
-                        <MudSelectItem Value="@(AssetStatus.Broken)"><MudText Color="Color.Error">@(AssetStatus.Broken.ToString())</MudText></MudSelectItem>
-                        <MudSelectItem Value="@(AssetStatus.Deprecated)">@(AssetStatus.Deprecated.ToString())</MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Available)">
+                            <MudText Color="Color.Success">@(AssetStatus.Available.ToString())</MudText>
+                        </MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Taken)">
+                            <MudText Color="Color.Info">@(AssetStatus.Taken.ToString())</MudText>
+                        </MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Broken)">
+                            <MudText Color="Color.Error">@(AssetStatus.Broken.ToString())</MudText>
+                        </MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Deprecated)">@(AssetStatus.Deprecated.ToString())
+                        </MudSelectItem>
                     </MudSelect>
                 </MudStack>
                 <MudStack Row="true" AlignItems="AlignItems.Center">
                     <MudText>
                         <b>Assigned To: </b>
                     </MudText>
-                    <MudAutocomplete Value="@assetSerial.Employee" T="UserDisplay" Margin="Margin.Dense" SearchFunc="@SearchEmployees" Variant="Variant.Outlined" ValueChanged="@(e => OnAssignedPersonChanged(e))"/>
+                    <MudAutocomplete Value="@assetSerial.Employee" T="UserDisplay" Margin="Margin.Dense"
+                        SearchFunc="@SearchEmployees" Variant="Variant.Outlined"
+                        ValueChanged="@(e => OnAssignedPersonChanged(e))" />
                 </MudStack>
             }
-
             <AssetSerialHistory Serial="@Serial" ShowHistory="@showHistory" />
         </MudStack>
     </MudNavMenu>
+
+    <NoteDialog />
 </MudDrawer>
 
 @code {
+    
     [Parameter] public string Serial { get; set; } = null!;
     private string prevSerial = string.Empty;
     [Parameter] public EventCallback OnSaveButtonClicked { get; set; }
-    GetAssetSerial assetSerial = null!;
+    public GetAssetSerial assetSerial = null!;
     private IEnumerable<UserDisplay> UserDisplays = [];
     private List<GetTag> Tags = [];
     private bool showHistory = false;
@@ -146,7 +159,7 @@
         assetSerial.Status = AssetStatus.Taken;
     }
 
-    private async Task OnSave()
+    private void OnSave()
     {
         if (assetSerial.Status == AssetStatus.Taken && assetSerial.Employee is null)
         {
@@ -155,26 +168,20 @@
             return;
         }
 
-        await AssetSerialService.UpdateSerial(new()
-        {
-            Id = assetSerial.Id,
-            Status = assetSerial.Status,
-            UserDisplay = assetSerial.Employee
-        });
-
-        Snackbar.Configuration.PositionClass = Defaults.Classes.Position.TopEnd;
-        Snackbar.Add("Serial succesfully updated", Severity.Success);
-        await OnSaveButtonClicked.InvokeAsync();
-        NavigationManager.NavigateTo("/assets");
+        DialogParameters parameters = new DialogParameters();
+        parameters.Add("AssetSerial", assetSerial);
+        parameters.Add("OnSaveButtonClicked", OnSaveButtonClicked);
+        DialogService.Show<NoteDialog>("Note", parameters);
     }
 
     private async Task<IEnumerable<UserDisplay>> SearchEmployees(string value)
     {
         if (string.IsNullOrEmpty(value))
             return await Task.FromResult(UserDisplays.ToArray());
-        
+
         value = value.ToUpper().Trim();
-        return await Task.FromResult(UserDisplays.Where(x => x.FirstName.ToUpper().Contains(value) || x.LastName.ToUpper().Contains(value)));
+        return await Task.FromResult(UserDisplays.Where(x => x.FirstName.ToUpper().Contains(value) ||
+        x.LastName.ToUpper().Contains(value)));
     }
 
     private string GetChipColor(string color)
