--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -17,6 +17,7 @@
 @using MRA.AssetsManagement.Web.Shared.AssetTypes
 @using MRA.AssetsManagement.Web.Shared.AssetSerials
 @using Microsoft.AspNetCore.Components.Authorization
+@using Blazored.TextEditor
 @using AssetsManagement.Web.Client.Services.Employees
 @using MRA.AssetsManagement.Web.Client.Services.Icons
 @using AssetsManagement.Web.Client.Services.AssetTypes
