--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -4,6 +4,7 @@
 @using MRA.AssetsManagement.Web.Client.Services.AssetSerials
 @using MRA.AssetsManagement.Web.Shared.Assets
 @using MRA.AssetsManagement.Web.Client.Services.Assets
+@using MRA.AssetsManagement.Web.Shared.Employees
 @using MRA.AssetsManagement.Web.Shared.Enums
 @using MRA.AssetsManagement.Web.Shared.Tags
 @inject IAssetsService AssetsService
@@ -166,5 +167,4 @@
         loading = false;
         return new TableData<GetAssetSerial>() { Items = result.Data, TotalItems = result.TotalCount };
     }
-
-}   
+}
