--- a/src/Web/Client/Shared/AssetSerialHistory.razor
+++ b/src/Web/Client/Shared/AssetSerialHistory.razor
@@ -2,6 +2,7 @@
 @using MRA.AssetsManagement.Web.Shared.AssetSerialHistory
 @using MRA.AssetsManagement.Web.Shared.Enums
 @inject IAssetSerialService AssetSerialService
+@inject IDialogService DialogService
 
 <MudButton FullWidth="true" Variant="Variant.Outlined" OnClick="LoadHistory">
     @if (isLoading)
@@ -31,16 +32,25 @@
         <MudTimeline TimelineAlign="TimelineAlign.Default" Class="mt-2 mb-2">
             @foreach (var history in Histories)
             {
-                <MudTimelineItem Size="Size.Small" Color="@GetTimelineItemColor(history.Status)" TimelineAlign="TimelineAlign.End">
+                <MudTimelineItem Size="Size.Small" Color="@GetTimelineItemColor(history.Status)"
+                    TimelineAlign="TimelineAlign.End">
                     <ItemOpposite>
                         <MudText Color="@GetTimelineItemColor(history.Status)" Typo="Typo.subtitle2">@history.Status</MudText>
                     </ItemOpposite>
                     <ItemContent>
-                        <MudText>@history.Date.ToString("dd MMM yyyy")</MudText>
-                        @if (history.Employee is not null)
-                        {
-                            <MudText Typo="Typo.body2" Style="color: gray"> by @history.Employee</MudText>
-                        }
+                        <MudStack Row AlignItems="AlignItems.Center" Justify="Justify.SpaceBetween">
+                            <MudStack>
+                                <MudText>@history.Date.ToString("dd MMM yyyy")</MudText>
+                                @if (history.Employee is not null)
+                                {
+                                    <MudText Typo="Typo.body2" Style="color: gray"> by @history.Employee</MudText>
+                                }
+                            </MudStack>
+                            @if (!string.IsNullOrEmpty(history.Note))
+                            {
+                                <MudIconButton Icon="@Icons.Material.Outlined.Comment" OnClick="@(e => ShowDialog(history))"></MudIconButton>
+                            }
+                        </MudStack>
                     </ItemContent>
                 </MudTimelineItem>
                 counter++;
@@ -50,6 +60,7 @@
 }
 
 @code {
+
     [Parameter] public string Serial { get; set; } = null!;
     [Parameter] public bool ShowHistory { get; set; }
     public bool showTimeLine = false;
@@ -65,6 +76,13 @@
         ShowHistory = true;
     }
 
+    void ShowDialog(GetAssetSerialHistory history)
+    {
+        var parameters = new DialogParameters();
+        parameters.Add("AssetSerialHistory", history);
+        DialogService.Show<NoteDialog>("Note", parameters);
+    }
+
     private Color GetTimelineItemColor(AssetStatus status)
     {
         return status switch
@@ -76,6 +94,4 @@
             _ => Color.Default
         };
     }
-
-    private TimelineAlign GetTimelineAlign(GetAssetSerialHistory history) => history.Employee is not null ? TimelineAlign.End : TimelineAlign.End;
 }
