--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -1,13 +1,11 @@
 @page "/settings/asset-types"
 @page "/settings/asset-types/{slug}"
+@attribute [Authorize(Roles = "SuperAdmin, ApplicationAdmin")]
 @layout SettingsLayout
 @inject IIconService IconService
-@using MRA.AssetsManagement.Web.Client.Components.MenuItems
 @inject IAssetTypesService AssetTypesService;
 @inject IMenuItemService MenuItemService;
 @inject ISnackbar Snackbar
-@attribute [Authorize]
-
 
 
 <PageTitle>Asset Types</PageTitle>
