--- a/src/Web/Client/Pages/Settings/Tags.razor
+++ b/src/Web/Client/Pages/Settings/Tags.razor
@@ -1,13 +1,11 @@
 @page "/settings/tags"
 @page "/settings/tags/{id}"
+@attribute [Authorize(Roles = "SuperAdmin, ApplicationAdmin")]
 @layout SettingsLayout
-@attribute [Authorize]
-@using MRA.AssetsManagement.Web.Client.Common.Extensions
-@using MRA.AssetsManagement.Web.Client.Components.MenuItems
-@using MRA.AssetsManagement.Web.Shared.Tags
 @inject ITagsService TagsService
 @inject IMenuItemService MenuItemService;
 @inject NavigationManager NavigationManager;
+
 
 <MudStack>
     <MudStack Row="true" Class="d-flex justify-space-between">
