--- a/src/Web/Client/Shared/NavMenu.razor
+++ b/src/Web/Client/Shared/NavMenu.razor
@@ -1,5 +1,4 @@
-﻿@using Blazored.LocalStorage
-@inject ILocalStorageService LocalStorageService
+﻿@inject ILocalStorageService LocalStorageService
 @inject CustomAuthStateProvider CustomAuthStateProvider
 
 <MudAppBar Elevation="2">
