--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -1,12 +1,6 @@
 @page "/assets"
 @page "/assets/{serial}"
-
-@using MRA.AssetsManagement.Web.Client.Services.AssetSerials
-@using MRA.AssetsManagement.Web.Shared.Assets
-@using MRA.AssetsManagement.Web.Client.Services.Assets
-@using MRA.AssetsManagement.Web.Shared.Employees
-@using MRA.AssetsManagement.Web.Shared.Enums
-@using MRA.AssetsManagement.Web.Shared.Tags
+@attribute [Authorize(Roles = "SuperAdmin, ApplicationAdmin")]
 @inject IAssetsService AssetsService
 @inject NavigationManager NavigationManager
 @inject IIconService IconService
@@ -121,6 +115,7 @@
 {
     <AssetSerialDetail Serial="@Serial" OnSaveButtonClicked="OnAssetSerialHasChanged" />
 }
+
 
 @code {
 
