--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -3,35 +3,44 @@
 <MudThemeProvider />
 <MudDialogProvider FullWidth=true MaxWidth="MaxWidth.ExtraSmall" DisableBackdropClick="true" />
 <MudSnackbarProvider />
-
 <MudLayout>
     <NavMenu OnToggle="@(() => open = !open)" />
-    <MudDrawer @bind-Open="@open" Elevation="2">
-        <MudDrawerHeader Class="d-flex justify-center">
-            <MudLink Href="/" Underline="Underline.None" Typo="Typo.h5">MRA Assets</MudLink>
-        </MudDrawerHeader>
-        <MudDrawerContainer>
-            <MudDivider />
-        </MudDrawerContainer>
-        <MudPaper Width="250px" Elevation="0" Class="py-3">
-           <MudNavMenu Color="Color.Info">
-               <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Assignment">Assets</MudNavLink>
-               <MudNavLink Href="/employees" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
-               <MudNavLink Href="/report" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.FileFormats.FileDocument">Reports</MudNavLink>
-               <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings"  Expanded="true">
-                   <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
-                    <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Tag" Href="/settings/tags">Tags</MudNavLink>
-               </MudNavGroup>
-           </MudNavMenu>
-        </MudPaper>
-    </MudDrawer>
+    <CascadingAuthenticationState>
+        <AuthorizeView Roles="SuperAdmin, ApplicationAdmin">
+            <Authorized>
+                <MudDrawer @bind-Open="@open" Elevation="2">
+                    <MudDrawerHeader Class="d-flex justify-center">
+                        <MudLink Href="/" Underline="Underline.None" Typo="Typo.h5">MRA Assets</MudLink>
+                    </MudDrawerHeader>
+                    <MudDrawerContainer>
+                        <MudDivider />
+                    </MudDrawerContainer>
+                    <MudPaper Width="250px" Elevation="0" Class="py-3">
+                        <MudNavMenu Color="Color.Info">
+                            <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Assignment">Assets</MudNavLink>
+                            <MudNavLink Href="/employees" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
+                            <MudNavLink Href="/report" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.FileFormats.FileDocument">Reports</MudNavLink>
+                            <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings" Expanded="true">
+                                <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category" Href="/settings/asset-types">Asset types</MudNavLink>
+                                <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Tag" Href="/settings/tags">Tags</MudNavLink>
+                            </MudNavGroup>
+                        </MudNavMenu>
+                    </MudPaper>
+                </MudDrawer>
+            </Authorized>
+            <NotAuthorized>
+                <div>You are not authorized to access this page.</div>
+            </NotAuthorized>
+        </AuthorizeView>
+    </CascadingAuthenticationState>
     <MudMainContent Class="pt-16">
         <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="mt-4">
-           @Body
+            @Body
         </MudContainer>
     </MudMainContent>
 </MudLayout>
 
 @code {
     bool open = true;
+
 }
