--- a/src/Web/Client/Pages/AssetSerialDetail.razor
+++ b/src/Web/Client/Pages/AssetSerialDetail.razor
@@ -90,6 +90,9 @@
                         </MudSelectItem>
                         <MudSelectItem Value="@(AssetStatus.Deprecated)">@(AssetStatus.Deprecated.ToString())
                         </MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Sold)">
+                            @(AssetStatus.Sold.ToString())
+                        </MudSelectItem>
                     </MudSelect>
                 </MudStack>
                 <MudStack Row="true" AlignItems="AlignItems.Center">
