--- a/src/Web/Client/Shared/StatusComponent.razor
+++ b/src/Web/Client/Shared/StatusComponent.razor
@@ -14,6 +14,9 @@
     case AssetStatus.Deprecated:
         <MudChip Size="Size.Small" Style="background-color: #94A1B3; font-weight: 500; color: white">Deprecated</MudChip>
         break;
+    case AssetStatus.Sold:
+        <MudChip Size="Size.Small" Style="background-color: red; font-weight: 500; color: white">Sold</MudChip>
+        break;
 }
 
 @code {
