--- a/src/Web/Client/Pages/AssetSerialDetail.razor
+++ b/src/Web/Client/Pages/AssetSerialDetail.razor
@@ -1,9 +1,3 @@
-@using MRA.AssetsManagement.Web.Client.Services.AssetSerials
-@using MRA.AssetsManagement.Web.Shared.AssetSerials
-@using MRA.AssetsManagement.Web.Shared.Assets
-@using MRA.AssetsManagement.Web.Shared.Employees
-@using MRA.AssetsManagement.Web.Shared.Enums
-@using MRA.AssetsManagement.Web.Shared.Tags
 @inject IAssetSerialService AssetSerialService
 @inject IEmployeesService EmployeesService
 @inject ITagsService TagsService
@@ -78,7 +72,7 @@
                         <b>Status: </b>
                     </MudText>
                     <MudSelect Value="assetSerial.Status" T="AssetStatus" Margin="Margin.Dense" Variant="Variant.Outlined"
-                        ValueChanged="@OnStatusItemChanged">
+                               ValueChanged="@OnStatusItemChanged" Disabled="@(IsReadOnly)">
                         <MudSelectItem Value="@(AssetStatus.Available)">
                             <MudText Color="Color.Success">@(AssetStatus.Available.ToString())</MudText>
                         </MudSelectItem>
@@ -86,28 +80,31 @@
                             <MudText Color="Color.Info">@(AssetStatus.Taken.ToString())</MudText>
                         </MudSelectItem>
                         <MudSelectItem Value="@(AssetStatus.Broken)">
-                            <MudText Color="Color.Error">@(AssetStatus.Broken.ToString())</MudText>
+                            <MudText Color="Color.Warning">@(AssetStatus.Broken.ToString())</MudText>
                         </MudSelectItem>
-                        <MudSelectItem Value="@(AssetStatus.Deprecated)">@(AssetStatus.Deprecated.ToString())
+                        <MudSelectItem Value="@(AssetStatus.Deprecated)">
+                            <MudText Color="Color.Dark">@(AssetStatus.Deprecated.ToString())</MudText>
                         </MudSelectItem>
                         <MudSelectItem Value="@(AssetStatus.Sold)">
-                            @(AssetStatus.Sold.ToString())
+                            <MudText Color="Color.Error">@(AssetStatus.Sold.ToString())</MudText>
                         </MudSelectItem>
                     </MudSelect>
                 </MudStack>
-                <MudStack Row="true" AlignItems="AlignItems.Center">
-                    <MudText>
-                        <b>Assigned To: </b>
-                    </MudText>
-                    <MudAutocomplete Value="@assetSerial.Employee" T="UserDisplay" Margin="Margin.Dense"
-                        SearchFunc="@SearchEmployees" Variant="Variant.Outlined"
-                        ValueChanged="@(e => OnAssignedPersonChanged(e))" />
-                </MudStack>
+                @if (!IsReadOnly)
+                {
+                    <MudStack Row="true" AlignItems="AlignItems.Center">
+                        <MudText>
+                            <b>Assigned To: </b>
+                        </MudText>
+                        <MudAutocomplete Value="@assetSerial.Employee" T="UserDisplay" Margin="Margin.Dense"
+                                         SearchFunc="@SearchEmployees" Variant="Variant.Outlined"
+                                         ValueChanged="@(e => OnAssignedPersonChanged(e))" />
+                    </MudStack>
+                }
             }
             <AssetSerialHistory Serial="@Serial" ShowHistory="@showHistory" />
         </MudStack>
     </MudNavMenu>
-
     <NoteDialog />
 </MudDrawer>
 
@@ -122,6 +119,7 @@
     private bool showHistory = false;
     private bool isLoading = true;
     private bool isSerialHasChanged = false;
+    private bool IsReadOnly => assetSerial?.Status == AssetStatus.Sold || assetSerial?.Status == AssetStatus.Deprecated;
 
     protected override async Task OnInitializedAsync()
     {
