--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -26,3 +26,17 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using MRA.AssetsManagement.Web.Client.Services.AuthService
 @using MRA.AssetsManagement.Web.Client.Services.HomeService
+@using MRA.AssetsManagement.Web.Client.Services.AssetSerials
+@using MRA.AssetsManagement.Web.Shared.Assets
+@using MRA.AssetsManagement.Web.Shared.Employees
+@using MRA.AssetsManagement.Web.Shared.Enums
+@using MRA.AssetsManagement.Web.Shared.Tags
+@using MRA.AssetsManagement.Web.Shared.AssetSerialHistory
+@using MRA.AssetsManagement.Web.Client.Pages
+@using Blazored.LocalStorage
+@using MRA.AssetsManagement.Web.Client.Components.MenuItems
+@using MRA.AssetsManagement.Web.Shared.AssetPurchases
+@using MRA.AssetsManagement.Web.Client.Services.Assets
+@using Blazored.FluentValidation
+@using MRA.AssetsManagement.Web.Client.Services.ReportService
+@using MRA.AssetsManagement.Web.Shared.Purchase
