--- a/src/Web/Client/Pages/AssetPurchase.razor
+++ b/src/Web/Client/Pages/AssetPurchase.razor
@@ -1,4 +1,4 @@
-﻿@page "/assets/purchase"
+@page "/assets/purchase"
 @attribute [Authorize(Roles = "SuperAdmin, ApplicationAdmin")]
 @inject IAssetTypesService AssetTypesService
 @inject IAssetsService AssetsService
