--- a/src/Web/Client/Pages/Report.razor
+++ b/src/Web/Client/Pages/Report.razor
@@ -1,4 +1,4 @@
-﻿@page "/report"
+@page "/report"
 @attribute [Authorize(Roles = "SuperAdmin, ApplicationAdmin")]
 @inject IReportService ReportService
 @inject IAssetTypesService AssetTypesService
