--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -18,11 +18,12 @@
         <MudGrid>
             <MudItem sm="2" />
             <MudItem sm="2">
-                <MudSelect @bind-Value="_assetsFilterOptions.Status" TextChanged="@OnFilterChange" T="string" Label="Status" Margin="Margin.Dense" Variant="Variant.Outlined" Clearable>
+                <MudSelect @bind-Value="_assetsFilterOptions.Status" TextChanged="@OnFilterChange" T="string" Label="Statuss" Margin="Margin.Dense" Variant="Variant.Outlined" Clearable>
                     <MudSelectItem Value="@(((int)AssetStatus.Available).ToString())"><MudText Color="Color.Success">@(AssetStatus.Available.ToString())</MudText></MudSelectItem>
                     <MudSelectItem Value="@(((int)AssetStatus.Taken).ToString())"><MudText Color="Color.Info">@(AssetStatus.Taken.ToString())</MudText></MudSelectItem>
-                    <MudSelectItem Value="@(((int)AssetStatus.Broken).ToString())"><MudText Color="Color.Error">@(AssetStatus.Broken.ToString())</MudText></MudSelectItem>
-                    <MudSelectItem Value="@(((int)AssetStatus.Deprecated).ToString())">@(AssetStatus.Deprecated.ToString())</MudSelectItem>
+                    <MudSelectItem Value="@(((int)AssetStatus.Broken).ToString())"><MudText Color="Color.Warning">@(AssetStatus.Broken.ToString())</MudText></MudSelectItem>
+                    <MudSelectItem Value="@(((int)AssetStatus.Deprecated).ToString())"><MudText Color="Color.Dark">@(AssetStatus.Deprecated.ToString())</MudText></MudSelectItem>
+                    <MudSelectItem Value="@(((int)AssetStatus.Sold).ToString())"><MudText Color="Color.Error">@(AssetStatus.Sold.ToString())</MudText></MudSelectItem>
                 </MudSelect>
             </MudItem>
 
